Ich war hier...

--- a/LaTex_Uebung5.tex
+++ b/LaTex_Uebung5.tex
@@ -35,4 +35,7 @@ Wir können auch die Formel für eine Summe angeben:
 \begin{equation}
 s = \sum_{i=1}^n i\ = \frac{n*(n+1)}{2}
 \end{equation}
+\section{Übung 7}
+Ich war hier - Andrea Guarneri
+
 \end{document} 
